--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/openvr"]
 	path = vendor/openvr
 	url = https://github.com/ValveSoftware/openvr.git
+[submodule "vendor/RectangleBinPack"]
+	path = vendor/RectangleBinPack
+	url = https://github.com/juj/RectangleBinPack.git
